modal overflow fix

--- a/src/app/pathfinding/menu/md-tutorial/md-tutorial.component.css
+++ b/src/app/pathfinding/menu/md-tutorial/md-tutorial.component.css
@@ -6,7 +6,6 @@
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
   background-color: rgba(0,0,0,0.4);
 }
 .show {
@@ -15,12 +14,18 @@
 
 .modal-content {
   background-color: #fefefe;
-  margin: 15% auto;
+  margin: 10% auto;
   padding: 20px;
   border: 1px solid #888;
   border-radius: 5px;
   width: 500px;
   text-align: center;
+  animation-name: animatetop;
+  animation-duration: 0.5s
+}
+@keyframes animatetop {
+  from {opacity: 0}
+  to {opacity: 1}
 }
 
 .close {
